@@ -1,4 +1,8 @@
-$Id: ChangeLog 4193 2015-12-19 14:43:50Z chrfranke $
+$Id: ChangeLog 4194 2016-01-01 13:46:00Z chrfranke $
+
+2016-01-01  Christian Franke  <franke@computer.org>
+
+	Happy New Year! Update copyright year in version info.
 
 2015-12-19  Christian Franke  <franke@computer.org>
 
